k8s-infra/apigwv2-httpapi.yaml
# route-key used in path
apiVersion: apigatewayv2.services.k8s.aws/v1alpha1
kind: Route
metadata:
  name: "ack-route"
spec:
  apiRef:
    from:
      name: "ack-api"
  routeKey: "GET /ack-route-key"
  targetRef:
    from:
      name: "ack-integration"


---
# route-key used in path
apiVersion: apigatewayv2.services.k8s.aws/v1alpha1
kind: Route
metadata:
  name: "ack-route-vpclink"
spec:
  apiRef:
    from:
      name: "ack-api"
  routeKey: "ANY /{proxy+}"
  targetRef:
    from:
      name: "vpc-integration"
