k8s-infra/internal-alb-dynamo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-api-dynamo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: api-dynamo
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-dynamo
    spec:
      serviceAccountName: dynamo-sa
      containers:
      - image: victorgucanada/restapi-dynamodb:latest
        imagePullPolicy: Always
        name: api-dynamo
        ports:
        - containerPort: 3000 # match with expose port in dockerfile
---
apiVersion: v1
kind: Service
metadata:
  name: service-api-dynamo
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: api-dynamo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api-dynamo
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-api-dynamo
              port:
                number: 80
